[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/tool_settings_panel/property_panels/float_panel.gd" type="Script" id=1]

[node name="FloatPanel" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -556.0
margin_bottom = -503.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 11.0
margin_right = 25.0
margin_bottom = 25.0
text = "text"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 29.0
margin_right = 350.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.0

[node name="LineEdit" type="LineEdit" parent="HSlider"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -12.0
margin_right = 45.0
margin_bottom = 12.0

[node name="Label2" type="Label" parent="."]
margin_left = 354.0
margin_top = 11.0
margin_right = 404.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 1
text = "value"
clip_text = true

[connection signal="gui_input" from="HSlider" to="." method="_on_HSlider_gui_input"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="focus_exited" from="HSlider/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="HSlider/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="gui_input" from="Label2" to="." method="_on_Label2_gui_input"]
